RESOLVED FIXED Bug 238466
REGRESSION(r291771): [ iOS ] Text sometimes draw with incorrect color
https://bugs.webkit.org/show_bug.cgi?id=238466
Summary REGRESSION(r291771): [ iOS ] Text sometimes draw with incorrect color
Attachments
BUG238466 Diff Images (136.60 KB, application/zip)
2022-03-28 13:29 PDT, Dawn Morningstar
no flags
Patch (10.98 KB, patch)
2022-03-28 20:53 PDT, Said Abou-Hallawa
simon.fraser: review+
Patch (10.98 KB, patch)
2022-03-29 01:32 PDT, Said Abou-Hallawa
no flags
Radar WebKit Bug Importer
Comment 1 2022-03-28 13:27:10 PDT
Dawn Morningstar
Comment 2 2022-03-28 13:29:45 PDT
Simon Fraser (smfr)
Comment 3 2022-03-28 13:32:12 PDT
This is a GPU-process-related color failure
Dawn Morningstar
Comment 4 2022-03-28 13:38:32 PDT
(In reply to Simon Fraser (smfr) from comment #3) > This is a GPU-process-related color failure Indeed and I saw that r291771 is a GPU-process patch. Are we thinking revert or can this be fixed?
Simon Fraser (smfr)
Comment 5 2022-03-28 13:45:55 PDT
This is a bug that Said is working on.
Said Abou-Hallawa
Comment 6 2022-03-28 20:53:27 PDT
Simon Fraser (smfr)
Comment 7 2022-03-28 22:19:40 PDT
Comment on attachment 455986 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=455986&action=review Are there any tests that have been marked as flakey that this fixes? > Source/WebCore/ChangeLog:3 > + REGRESSION(r291771): [ iOS ] Glyphs should only be recorded after setting the destination GraphicsContext It's good if the bug title describes the user-visible symptom (e.g. "Text sometimes draw with incorrect color").
Said Abou-Hallawa
Comment 8 2022-03-29 01:32:07 PDT
EWS
Comment 9 2022-03-29 02:44:15 PDT
Committed r292026 (248969@main): <https://commits.webkit.org/248969@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456005 [details].
Note You need to log in before you can comment on or make changes to this bug.