Cherry-pick r292026. rdar://problem/90941790

REGRESSION(r291771): [ iOS ] Text sometimes draw with incorrect color
    https://bugs.webkit.org/show_bug.cgi?id=238466
    rdar://90941790

    Reviewed by Simon Fraser.

    r291771 uncovers this bug: TextBoxPainter::paintForeground() records the
    glyphs to a DisplayList before settings the destination GraphicsContext.

    The fix is to apply all the changes to the GraphicsContext before calling
    TextPainter::setGlyphDisplayListIfNeeded().

    Delete TextPainter::paint() because it is not used.

    Initialize TextPainter with a reference to FontCascade.

    * rendering/TextBoxPainter.cpp:
    (WebCore::TextBoxPainter::paintForeground):
    * rendering/TextPainter.cpp:
    (WebCore::TextPainter::TextPainter):
    (WebCore::TextPainter::paintTextAndEmphasisMarksIfNeeded):
    (WebCore::TextPainter::paintRange):
    (WebCore::TextPainter::paint): Deleted.
    * rendering/TextPainter.h:
    (WebCore::TextPainter::setShadowColorFilter):
    (WebCore::TextPainter::setGlyphDisplayListIfNeeded):
    (WebCore::TextPainter::setFont): Deleted.

    Canonical link: https://commits.webkit.org/248969@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292026 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/248920.8@safari-614.1.8-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-614.1.8-branch@292039 268f45cc-cd09-0410-ab3c-d52691b4dbfc